--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -7,7 +7,7 @@ This code was generated from the PeakRDL-python package
 from typing import Tuple, NoReturn
 from typing import Iterable
 
-from .peakrdl_python_types import AddressMap, Reg, RegFile, AddressSpaceProps
+from .peakrdl_python_types import AddressMap, Reg, RegFile
 from .peakrdl_python_types import RegReadOnly, RegWriteOnly, RegReadWrite
 from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite, FieldSizeProps
 from .peakrdl_python_types import ReadCallback, WriteCallback
@@ -24,9 +24,7 @@ from .peakrdl_python_types import ReadCallback, WriteCallback
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
                                                                    write_callback=write_callback,
-                                                                   address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                     address_width=self.address_width,
-                                                                                     data_width=self.data_width),
+                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
@@ -34,9 +32,7 @@ from .peakrdl_python_types import ReadCallback, WriteCallback
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
-                                                                   address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                     address_width=self.address_width,
-                                                                                     data_width=self.data_width),
+                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
@@ -44,9 +40,7 @@ from .peakrdl_python_types import ReadCallback, WriteCallback
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(write_callback=write_callback,
-                                                                   address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                     address_width=self.address_width,
-                                                                                     data_width=self.data_width),
+                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
@@ -56,56 +50,27 @@ from .peakrdl_python_types import ReadCallback, WriteCallback
             {%- if node.has_sw_readable and node.has_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
                                                                  write_callback=write_callback,
-                                                                 address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.address_offset}},
-                                                                 address_width=self.address_width,
-                                                                 data_width=self.data_width),
+                                                                 address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}')
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
-                                                                 address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.address_offset}},
-                                                                 address_width=self.address_width,
-                                                                 data_width=self.data_width),
+                                                                 address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}')
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(write_callback=write_callback,
-                                                                                 address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.address_offset}},
-                                                                                 address_width=self.address_width,
-                                                                                 data_width=self.data_width),
-                                                                                 logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                   inst_name='{{node.inst_name}}')
-            {%- endif %}
-        {%- endif %}
-    {%- elif isinstance(node, systemrdlRegfileNode) %}
-        {%- if node.is_array %}
-    self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                       {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
-                                                                                   write_callback=write_callback,
-                                                                                   address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                   address_width=self.address_width,
-                                                                                   data_width=self.data_width),
-                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}')
-                                       {%- if not loop.last -%} ,  {%- endif -%}
-                                       {% endfor %} )
-        {%- else -%}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
-                                                                                 write_callback=write_callback,
-                                                                                 address_space_properties=AddressSpaceProps(base_address=self.base_address+{{node.address_offset}},
-                                                                                 address_width=self.address_width,
-                                                                                 data_width=self.data_width),
+                                                                                 address=self.address+{{node.address_offset}},
                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                  inst_name='{{node.inst_name}}')
+            {%- endif %}
         {%- endif %}
-    {%- elif isinstance(node, systemrdlAddrmapNode) %}
+    {%- elif isinstance(node, systemrdlRegfileNode) or isinstance(node, systemrdlAddrmapNode) %}
         {%- if node.is_array %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
                                                                                    write_callback=write_callback,
-                                                                                   base_address=self.base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                   address_width=self.address_width,
-                                                                                   data_width=self.data_width,
+                                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
@@ -113,9 +78,7 @@ from .peakrdl_python_types import ReadCallback, WriteCallback
         {%- else -%}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
                                                                                  write_callback=write_callback,
-                                                                                 base_address=self.base_address+{{node.address_offset}},
-                                                                                 address_width=self.address_width,
-                                                                                 data_width=self.data_width,
+                                                                                 address=self.address+{{node.address_offset}},
                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                  inst_name='{{node.inst_name}}')
         {%- endif %}
@@ -135,11 +98,11 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegFile):
     def __init__(self,
                  read_callback: ReadCallback,
                  write_callback: WriteCallback,
-                 address_space_properties: AddressSpaceProps,
+                 address: int,
                  logger_handle:str,
                  inst_name:str):
 
-        super().__init__(address_space_properties=address_space_properties,
+        super().__init__(address=address,
                          logger_handle=logger_handle,
                          inst_name=inst_name)
 
@@ -172,15 +135,11 @@ class {{get_fully_qualified_type_name(node)}}_cls(AddressMap):
     def __init__(self,
                  read_callback: ReadCallback,
                  write_callback: WriteCallback,
-                 base_address:int {%- if node == top_node -%}={{top_node.absolute_address}}{%- endif -%},
+                 address:int {%- if node == top_node -%}={{top_node.absolute_address}}{%- endif -%},
                  logger_handle:str {%- if node == top_node -%}='reg_model.{{top_node.get_path()}}'{%- endif -%},
-                 inst_name{%- if node == top_node -%}='{{node.inst_name}}'{%- endif -%},
-                 address_width=32,
-                 data_width=32):
+                 inst_name{%- if node == top_node -%}='{{node.inst_name}}'{%- endif -%}):
 
-        super().__init__(address_space_properties=AddressSpaceProps(base_address=base_address,
-                                                                    address_width=address_width,
-                                                                    data_width=data_width),
+        super().__init__(address=address,
                          logger_handle=logger_handle,
                          inst_name=inst_name)
 
@@ -226,12 +185,16 @@ class {{get_fully_qualified_enum_type(enum_needed, top_node.parent)}}_enumcls(In
 
 if __name__ == '__main__':
     # dummy functions to demonstrate the class
-    def read_addr_space(addr: int):
+    def read_addr_space(addr: int, width: int, accesswidth: int):
         assert isinstance(addr, int)
+        assert isinstance(width, int)
+        assert isinstance(accesswidth, int)
         return input('value to read from address:0x%X'%addr)
 
-    def write_addr_space(addr: int, data: int):
+    def write_addr_space(addr: int, width: int, accesswidth: int, data: int):
         assert isinstance(addr, int)
+        assert isinstance(width, int)
+        assert isinstance(accesswidth, int)
         assert isinstance(data, int)
         print('write data:0x%X to address:0x%X'%(data, addr))
 
