--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -9,7 +9,8 @@ from typing import Iterable
 
 from .peakrdl_python_types import AddressMap, Reg, RegFile
 from .peakrdl_python_types import RegReadOnly, RegWriteOnly, RegReadWrite
-from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite, FieldSizeProps
+from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite
+from .peakrdl_python_types import FieldSizeProps
 from .peakrdl_python_types import ReadCallback, WriteCallback
 
 {% from 'addrmap_field.py.jinja' import field_class with context %}
@@ -185,13 +186,38 @@ class {{get_fully_qualified_enum_type(enum_needed, top_node.parent)}}_enumcls(In
 
 if __name__ == '__main__':
     # dummy functions to demonstrate the class
-    def read_addr_space(addr: int, width: int, accesswidth: int):
+    def read_addr_space(addr: int, width: int, accesswidth: int) -> int:
+        """
+        Callback to simulate the operation of the package, everytime the read is called, it will
+        request the user input the value to be read back.
+
+        Args:
+            addr: Address to write to
+            width: Width of the register in bits
+            accesswidth: Minimium access width of the register in bits
+
+        Returns:
+            value inputted by the used
+        """
         assert isinstance(addr, int)
         assert isinstance(width, int)
         assert isinstance(accesswidth, int)
         return input('value to read from address:0x%X'%addr)
 
-    def write_addr_space(addr: int, width: int, accesswidth: int, data: int):
+    def write_addr_space(addr: int, width: int, accesswidth: int, data: int) -> NoReturn:
+        """
+        Callback to simulate the operation of the package, everytime the read is called, it will
+        request the user input the value to be read back.
+
+        Args:
+            addr: Address to write to
+            width: Width of the register in bits
+            accesswidth: Minimium access width of the register in bits
+            data: value to be written to the register
+
+        Returns:
+            None
+        """
         assert isinstance(addr, int)
         assert isinstance(width, int)
         assert isinstance(accesswidth, int)
