--- a/peakrdl/python/templates/addrmap_tb.py.jinja
+++ b/peakrdl/python/templates/addrmap_tb.py.jinja
@@ -8,6 +8,7 @@ from unittest.mock import patch
 import random
 from itertools import combinations
 
+from ..peakrdl_python import CallbackSet
 
 from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
 
@@ -38,7 +39,8 @@ def write_callback(addr: int, width: int, accesswidth: int,  data: int):
 class {{top_node.type_name}}_TestCase(unittest.TestCase):
 
     def setUp(self):
-        self.dut = {{top_node.type_name}}_cls(read_callback=read_callback, write_callback=write_callback)
+        self.dut = {{top_node.type_name}}_cls(CallbackSet(read_callback=read_callback,
+                                                          write_callback=write_callback))
 
     @staticmethod
     def _reverse_bits(value: int, number_bits: int) -> int:
