--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -4,7 +4,7 @@ This code was generated from the PeakRDL-python package
 
 """
 {% if uses_enum %}from enum import IntEnum, unique{% endif %}
-from typing import Tuple, NoReturn
+from typing import Tuple
 from typing import Iterable
 
 from ..peakrdl_python import AddressMap, RegFile
@@ -249,7 +249,7 @@ if __name__ == '__main__':
         assert isinstance(accesswidth, int)
         return input('value to read from address:0x%X'%addr)
 
-    def write_addr_space(addr: int, width: int, accesswidth: int, data: int) -> NoReturn:
+    def write_addr_space(addr: int, width: int, accesswidth: int, data: int) -> None:
         """
         Callback to simulate the operation of the package, everytime the read is called, it will
         request the user input the value to be read back.
