--- a/peakrdl/python/templates/addrmap_register.py.jinja
+++ b/peakrdl/python/templates/addrmap_register.py.jinja
@@ -12,7 +12,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
     {{get_table_block(node) | indent}}
     """
 
-    __slots__ = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
+    __slots__ : List[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
     def __init__(self,
                  callbacks: CallbackSet,
@@ -105,7 +105,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         self.write((self.read() & inverse_bit_mask) | reg_value)
 
     {% else %}
-    def write_fields(self, {%- for child_node in node.fields() -%} {{child_node.inst_name}} : int{%- if not loop.last -%},{%- endif -%}{%- endfor -%}) -> None:
+    def write_fields(self, {%- for child_node in node.fields() -%} {{child_node.inst_name}} : {%- if 'encode' in child_node.list_properties() %}{{get_fully_qualified_enum_type(child_node.get_property('encode'), top_node.parent)}}_enumcls{% else %}int{% endif %}{%- if not loop.last -%},{%- endif -%}{%- endfor -%}) -> None:
         """
         Do a write to the register, updating all fields
         """
